--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
+    "emailjs-com": "^3.2.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
