--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
     "emailjs-com": "^3.2.0",
+    "sweetalert2": "^11.4.17",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
